# jupyter_rs_vtk

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  install.json  jupyter_rs_vtk.json  package.json  pyproject.toml  setup.cfg  setup.py
examples/: VTK_Example01.ipynb
js/: package-lock.json  package.json  webpack.config.js
js/lib/: gui_utils.js  index.js  labplugin.js  rs_utils.js  vtk_utils.js  vtk_viewer.js
jupyter-rs-vtk/: .gitignore  README.md  jupyter-rs-vtk.json  setup.py
jupyter-rs-vtk/examples/: VTK_Example01.ipynb
jupyter-rs-vtk/js/: README.md  package-lock.json  webpack.config.js
jupyter-rs-vtk/js/lib/: embed.js  vtk_viewer.js
jupyter-rs-vtk/jupyter_rs_vtk/: vtk_utils.py  vtk_viewer.py
jupyter_rs_vtk/: __init__.py  gui_utils.py  rs_utils.py  vtk_viewer.py
lib/: extension.js  index.js  labplugin.js  vtk_utils.js  vtk_viewer.js
